# git-ai

./: .gitignore  12345  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Readme.md  SENTRY_INTEGRATION.md  SENTRY_USAGE_EXAMPLES.md  Taskfile.yml  install.ps1  install.sh  meesa.txt  run-github-tests.sh  test-agent-preset-v1.sh
.github/scripts/: comment-pr.js
.github/workflows/: e2e-tests.yml  github-integration-tests.yml  pr-comment.yml  publish-cursor-extension.yml  release.yml  test.yml
agent-support/: claude-code.md
agent-support/cursor/: CHANGELOG.md  README.md  package.json
agent-support/vscode/: README.md  package.json
docs/: add-your-agent.mdx  ci-workflows.mdx  claude-code.mdx  cursor.mdx  enterprise-configuration.mdx  enterprise-deployment-hooks.mdx  enterprise-deployment-wrapper.mdx  enterprise-performance.mdx  how-git-ai-works.mdx  index.mdx  limitations.mdx  meta.json  performance.mdx  reference.mdx  vs-code-github-copilot.mdx
docs/agent-support/: claude-code.mdx  cursor.mdx  vs-code-github-copilot.mdx
scripts/: dev-symlinks.sh
src/: config.rs  error.rs  lib.rs  main.rs  tmp_repo.rs  utils.rs
src/authorship/: attribution_tracker.rs  authorship_log.rs  mod.rs  move_detection.rs  (+9 more)
templates/: squash-authorship.yml
tests/: ai_tab.rs  amend.rs  blame_flags.rs  cherry_pick.rs  ci_squash_rebase.rs  claude_code.rs  cursor.rs  git_cli_arg_parsing.rs  github_copilot.rs  initial_attributions.rs  merge-rebase.rs  merge_rebase.rs  rebase.rs  repos_test.rs  reset.rs  simple_additions.rs  squash_merge.rs  stats.rs  test_utils.rs  tmp_file_demo.rs
(+171 files in other folders)
