[package]
name = "git-ai"
version = "1.0.0"
edition = "2024"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
similar = "2.7.0"
chrono = "0.4.41"
indicatif = "0.17"
smol = "1.3"
rusqlite = { version = "0.31", features = ["bundled"] }
libc = "0.2"
once_cell = "1.21.3"
git2 = { version = "0.20.2", optional = true }

[features]
test-support = ["git2"]

[dev-dependencies]
git-ai = { path = ".", features = ["test-support"] }
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
insta = "1.38"
